# myls

./: .gitignore  CMakeLists.txt  README.md  README.txt  comparators.cpp  comparators.h  main.cpp  parse_options.cpp  parse_options.h  structs.h
